fix z-index of nav - code elements were appearing above

--- a/css/sass/base/_layout.scss
+++ b/css/sass/base/_layout.scss
@@ -35,7 +35,7 @@ body{
 	line-height:$base_spacing_px;
 }
 header.page-header{
-	z-index:1;
+	z-index:1000;
     background-color: #FFF;
 	padding:0;
     border-bottom: 3px solid #EEE;
